# sehetna

./: .gitignore  Dockerfile  docker-compose.yaml  labels_var_keys.json  main.py  pyproject.toml
server/: .dockerignore  .gitignore  Dockerfile  ProcessOpenAQ.py  app.py  config.py  getDataByCountriesPrioritizeDateRange.py  getDataByCountriesPrioritizeSensors.py  main.py  openaq.py  pyproject.toml  requirements.txt
server/resources/: iso3_codes_m49_mapping.csv
server/resources/archives/[epoch=033-val_loss=0.2392]-patchtsmixer/: model.ckpt
server/resources/archives/[model-0o2w5wtd-v0]-lstm/: feature_pipeline.joblib  model.pkl
server/resources/archives/[model-67ual6ug-v0]-patch-tst/: y_scaler.joblib
server/resources/archives/[model-nvefcg0z-v0]-patch-tst/: model.pkl  pipeline.joblib  y_scaler.joblib
server/resources/archives/[modelling_phase_v5]-multioutput_lgbm/: shap_background.joblib
server/resources/archives/shared/: country_to_id.joblib  gpt2-patchtsmixer-scaler.joblib  id_to_country.joblib
server/resources/configurations/: feature_groups.json  features.json  targets.json
server/resources/data/: main.csv
server/resources/meta/: imp-air-quality-notes.txt
server/src/: Constants.py  DataExtractor.py  StataCompiler.py  __init__.py  app.py  config.py  main.py
server/src/api/: dependencies.py
server/src/api/routers/: inference.py  root.py
server/src/application/agents/: interpreter_agent.py  prompts.py
server/src/application/services/: agent_service.py  forecast_service.py  multi_model_prediction_service.py  (+4 more)
server/src/core/: container.py  error_handlers.py  exceptions.py  lifespan.py  settings.py
server/src/data_extraction/: openaq_sensors.py
server/src/domain/: sequential_dataset.py  types.py
server/src/experiments/: DataExtractor.py  StataCompiler.py
server/src/models/: ForecastModelFactory.py  SequentialModel.py  __init__.py  dataset.py  loader.py  model_loader.py  patchTST.py  patchTST_model.py  predictor.py  timesfm_model.py
server/src/routers/: __init__.py  inference.py
server/src/schema/: __init__.py  multi_model_schemas.py  predictions.py  request_response.py
server/src/utils/: feature_computer.py  filling_gaps.py  prediction_utils.py  sequential_utils.py
(+557 files in other folders)
