[project]
name = "enviornment-impact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "fastapi-versioning>=0.10.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyreadstat>=1.3.1",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
    "lightgbm>=4.6.0",
]
