[tool.ruff]
target-version = "py312"
line-length = 128

# Enable only useful, low-noise rules
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # bugbear (real issues)
    "UP", # pyupgrade
]

# Ignore noisy / annoying rules
ignore = [
    "F405", # name may be undefined, or defined from star imports
    "F403", # from module import * (common in __init__.py)
    "E501", # line length (Black handles this)
    "B008", # function calls in defaults (FastAPI common)
    "B905", # strict zip() (rarely useful)
]

# Allow unused variables starting with _
dummy-variable-rgx = "^_"

[tool.ruff.lint]
fixable = ["ALL"]

[tool.black]
line-length = 128
target-version = ["py312"]
skip-string-normalization = false
preview = false

[tool.uv.sources]
timesfm = { git = "https://github.com/google-research/timesfm.git" }

[project]
name = "enviornment-impact"
version = "0.1.0"
description = "A FastAPI application for predicting health outcomes based on environmental data."
authors = [{ name = "Mohamed Hussien", email = "mohamedhussien.asu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyreadstat>=1.3.1",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
    "lightgbm>=4.6.0",
    "shap>=0.49.1",
    "transformers>=5.1.0",
    "timesfm",
]

[dependency-groups]
dev = ["black>=25.12.0", "ruff>=0.14.11"]
